force-app/main/default/objects/DSD_Data_Skew_Detector_Settings__mdt/DSD_Data_Skew_Detector_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Data Skew Detector Settings</label>
    <pluralLabel>Data Skew Detector Settings</pluralLabel>
</CustomObject>