force-app/main/default/objects/DSD_Data_Skew_Detector_Settings__mdt/fields/DSD_Last_Run_Skewed_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>DSD_Last_Run_Skewed_Record_Count__c</fullName>
    <description>The number of records found with data skew during the last run job</description>
    <inlineHelpText>The number of records found with data skew during the last run job</inlineHelpText>
    <label>Last Run Skewed Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>