force-app/main/default/objects/DSD_Data_Skew_Detector_Settings__mdt/fields/DSD_Last_Run_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>DSD_Last_Run_Start_Time__c</fullName>
    <description>The date and time that the last job of this type was started</description>
    <inlineHelpText>The date and time that the last job of this type was started</inlineHelpText>
    <label>Last Run Start Time</label>
    <type>DateTime</type>
</CustomField>