force-app/main/default/objects/DSD_Data_Skew_Detector_Settings__mdt/fields/DSD_Lookup_Skew_Child_Limit__c.field-meta.xml
<CustomField>
    <fullName>DSD_Lookup_Skew_Child_Limit__c</fullName>
    <description>Limits the number of child objects to scan for lookup data skew</description>
    <inlineHelpText>Limits the number of child objects to scan for lookup data skew</inlineHelpText>
    <label>Lookup Skew Child Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>