force-app/main/default/objects/DSD_Data_Skew_Detector_Settings__mdt/fields/DSD_Parent_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>DSD_Parent_Object_API_Name__c</fullName>
    <description>The API name of the parent object to look for data skew on</description>
    <inlineHelpText>The API name of the parent object to look for data skew on</inlineHelpText>
    <label>Parent Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>