force-app/main/default/objects/DSD_Data_Skew_Detector_Settings__mdt/fields/DSD_Report_Other_Record_Counts__c.field-meta.xml
<CustomField>
    <fullName>DSD_Report_Other_Record_Counts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, record counts of child records will be recorded based on the Reportng Threshold value.</description>
    <inlineHelpText>When checked, record counts of child records will be recorded based on the Reportng Threshold value.</inlineHelpText>
    <label>Report Other Record Counts</label>
    <type>Checkbox</type>
</CustomField>