force-app/main/default/objects/DSD_Data_Skew_Detector_Settings__mdt/fields/DSD_Reporting_Threshold__c.field-meta.xml
<CustomField>
    <fullName>DSD_Reporting_Threshold__c</fullName>
    <description>If a parent object has this many child records or more, it will be flagged for reporting but not as having data skew</description>
    <inlineHelpText>If a parent object has this many child records or more, it will be flagged for reporting but not as having data skew</inlineHelpText>
    <label>Reporting Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>