force-app/main/default/objects/DSD_Data_Skew_Detector_Settings__mdt/fields/DSD_Skew_Type__c.field-meta.xml
<CustomField>
    <fullName>DSD_Skew_Type__c</fullName>
    <description>The type of data skew to detect</description>
    <inlineHelpText>The type of data skew to detect</inlineHelpText>
    <label>Skew Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>